# libyal_cmake

./: CMakeLists.txt  README.MD  clean.sh
afflibv3/: CMakeLists.txt
afflibv3/include/afflib/: affconfig.h
afflibv3/lib/: aftest.cpp  crypto.cpp
bzip2/: bzip2-config.cmake
libbde/common/: config.h  types.h
libbde/include/libbde/: definitions.h  features.h  types.h
libbde/libbde/: libbde.rc  libbde_definitions.h
libewf/common/: Makefile  Makefile.in  config.h  config.h.in
libewf/ewf.net/: ewf.net.rc.in  ewf.net_definitions.h  ewf.net_file_entry.cpp  ewf.net_file_entry.h  ewf.net_handle.cpp  ewf.net_handle.h  ewf.net_sector_range.cpp  ewf.net_sector_range.h  ewf.net_support.cpp  ewf.net_support.h
libewf/ewftools/: Makefile  Makefile.in
libewf/include/: Makefile  Makefile.in
libewf/include/libewf/: features.h  types.h
libewf/libewf/: Makefile  Makefile.in  libewf.rc  libewf.rc.in  libewf_libfvalue.h
libewf/msvscpp/: libewf.sln
libewf/msvscpp/dokan/: dokan.vcproj
libewf/msvscpp/ewf_test_analytical_data/: ewf_test_analytical_data.vcproj
libewf/msvscpp/ewf_test_case_data/: ewf_test_case_data.vcproj
libewf/msvscpp/ewf_test_chunk_data/: ewf_test_chunk_data.vcproj
libewf/msvscpp/ewf_test_chunk_group/: ewf_test_chunk_group.vcproj
libewf/msvscpp/ewf_test_chunk_table/: ewf_test_chunk_table.vcproj
libewf/msvscpp/ewf_test_data_chunk/: ewf_test_data_chunk.vcproj
libewf/msvscpp/ewf_test_device_information/: ewf_test_device_information.vcproj
libewf/msvscpp/ewf_test_error/: ewf_test_error.vcproj
libewf/msvscpp/ewf_test_file_entry/: ewf_test_file_entry.vcproj
libewf/msvscpp/ewf_test_glob/: ewf_test_glob.vcproj
libewf/msvscpp/ewf_test_handle/: ewf_test_handle.vcproj
libewf/msvscpp/ewf_test_hash_sections/: ewf_test_hash_sections.vcproj
libewf/msvscpp/ewf_test_hash_values/: ewf_test_hash_values.vcproj
libewf/msvscpp/ewf_test_header_sections/: ewf_test_header_sections.vcproj
libewf/msvscpp/ewf_test_header_values/: ewf_test_header_values.vcproj
libewf/msvscpp/ewf_test_io_handle/: ewf_test_io_handle.vcproj
libewf/msvscpp/ewf_test_media_values/: ewf_test_media_values.vcproj
libewf/msvscpp/ewf_test_notify/: ewf_test_notify.vcproj
libewf/msvscpp/ewf_test_read_io_handle/: ewf_test_read_io_handle.vcproj
libewf/msvscpp/ewf_test_restart_data/: ewf_test_restart_data.vcproj
libewf/msvscpp/ewf_test_section/: ewf_test_section.vcproj
libewf/msvscpp/ewf_test_sector_range/: ewf_test_sector_range.vcproj
libewf/msvscpp/ewf_test_segment_file/: ewf_test_segment_file.vcproj
libewf/msvscpp/ewf_test_segment_table/: ewf_test_segment_table.vcproj
libewf/msvscpp/ewf_test_single_file_entry/: ewf_test_single_file_entry.vcproj
libewf/msvscpp/ewf_test_single_files/: ewf_test_single_files.vcproj
libewf/msvscpp/ewf_test_support/: ewf_test_support.vcproj
libewf/msvscpp/ewf_test_truncate/: ewf_test_truncate.vcproj
libewf/msvscpp/ewf_test_write/: ewf_test_write.vcproj
libewf/msvscpp/ewf_test_write_chunk/: ewf_test_write_chunk.vcproj
libewf/msvscpp/ewf_test_write_io_handle/: ewf_test_write_io_handle.vcproj
libewf/msvscpp/ewfacquire/: ewfacquire.vcproj
libewf/msvscpp/ewfacquirestream/: ewfacquirestream.vcproj
libewf/msvscpp/ewfdebug/: ewfdebug.vcproj
libewf/msvscpp/ewfexport/: ewfexport.vcproj
libewf/msvscpp/ewfinfo/: ewfinfo.vcproj
libewf/msvscpp/ewfmount/: ewfmount.vcproj
libewf/msvscpp/ewfrecover/: ewfrecover.vcproj
libewf/msvscpp/ewfverify/: ewfverify.vcproj
libewf/msvscpp/libcaes/: libcaes.vcproj
libewf/msvscpp/libewf/: libewf.vcproj
libewf/msvscpp/libfvalue/: libfvalue.vcproj
libewf/msvscpp/libhmac/: libhmac.vcproj
libewf/msvscpp/libsmraw/: libsmraw.vcproj
libewf/pyewf/: Makefile  Makefile.in
libfvde/common/: Makefile  config.h  config.h.in
libfvde/fvdetools/: Makefile
libfvde/include/: Makefile
libfvde/intl/: VERSION
libfvde/libfvde/: Makefile  libfvde.rc  libfvde.rc.in  libfvde_libfvalue.h
libfvde/msvscpp/: libfvde.sln
libfvde/pyfvde/: Makefile
libqcow/common/: config.h  types.h
libqcow/libqcow/: libqcow_definitions.h
libqcow/pyqcow/: pyqcow.h  pyqcow_encryption_types.h
libregf/common/: config.h  types.h
libregf/libregf/: libregf_definitions.h
libvhdi/common/: config.h  types.h
libvhdi/libvhdi/: libvhdi.rc  libvhdi_definitions.h
libvmdk/common/: config.h  types.h
libvmdk/libvmdk/: libvmdk.rc  libvmdk_definitions.h  libvmdk_descriptor_file.c  libvmdk_handle.c  libvmdk_libfvalue.h
libvmdk/pyvmdk/: pyvmdk.h
libvshadow/common/: config.h  types.h
libvshadow/libvshadow/: libvshadow.rc  libvshadow_definitions.h
libyal_libs/libbfio/: Makefile  Makefile.am~  Makefile.in
libyal_libs/libcaes/: Makefile  Makefile.am~  Makefile.in
libyal_libs/libcdata/: Makefile  Makefile.am~  Makefile.in
libyal_libs/libcdatetime/: Makefile  Makefile.am  Makefile.am~  Makefile.in
libyal_libs/libcerror/: Makefile  Makefile.am~  Makefile.in
libyal_libs/libcfile/: Makefile  Makefile.am~  Makefile.in
libyal_libs/libclocale/: Makefile  Makefile.am~  Makefile.in
libyal_libs/libcnotify/: Makefile  Makefile.am~  Makefile.in
libyal_libs/libcpath/: Makefile  Makefile.am~  Makefile.in  libcpath_definitions.h
libyal_libs/libcsplit/: Makefile  Makefile.am~  Makefile.in
libyal_libs/libcthreads/: Makefile  Makefile.am~  Makefile.in
libyal_libs/libfcache/: Makefile  Makefile.am~  Makefile.in
libyal_libs/libfdata/: Makefile  Makefile.am~  Makefile.in
libyal_libs/libfdatetime/: Makefile  Makefile.in
libyal_libs/libfguid/: Makefile  Makefile.am~  Makefile.in
libyal_libs/libfplist/: Makefile  Makefile.am~  libfplist_definitions.h  libfplist_libfvalue.h  libfplist_xml_scanner.c
libyal_libs/libfvalue/: Makefile  Makefile.am~  Makefile.in
libyal_libs/libhmac/: Makefile  Makefile.am~  Makefile.in
libyal_libs/libodraw/: Makefile  Makefile.am  Makefile.am~  Makefile.in
libyal_libs/libsmdev/: Makefile  Makefile.am  Makefile.am~  Makefile.in  libsmdev_definitions.h
libyal_libs/libsmraw/: Makefile  Makefile.am  Makefile.am~  Makefile.in
libyal_libs/libuna/: Makefile  Makefile.am~  Makefile.in
(+42 files in other folders)
